# book_summarizer

./: Dockerfile  README.md  book_rec.env  docker-compose.yaml  environment.yml  pyproject.toml  requirements.txt
api/: api_utils.py
api/test/: test_api_2.py
book_summarizer/: __init__.py
book_summarizer/api/: main.py
book_summarizer/config/: config.py
book_summarizer/db/: test.py
book_summarizer/db/cruds/: crud_books.py
book_summarizer/db/cruds/test/: test_crud_book.py  test_crud_review.py
book_summarizer/db/models/: models.py
book_summarizer/db_migration/: alembic.ini
book_summarizer/db_migration/alembic/: env.py
book_summarizer/llm/: llm_summarize.py
book_summarizer/llm/prompts/: book_prompt.py
book_summarizer/llm/test/: test_llm.py
book_summarizer/utils/: exception_utils.py
db/: session.py
db/cruds/: crud_base.py  crud_reviews.py
db/models/: base_class.py
db/schema/: schemas.py
db/schema/test/: test_schemas.py
db_migration/alembic/versions/: d7b709000190_db_v01.py
llm/: get_llm.py
recommendation/: recommendation.py
recommendation/prediction/: make_prediction.py
